# mamoru_agent

./: README.md
mamoru_agent_api/: README.md  hello.py  pyproject.toml  requirements.txt
mamoru_agent_api/app/: main.py
mamoru_agent_api/app/api/: endpoints.py
mamoru_agent_api/app/data/: labor_bureaus.py
mamoru_agent_api/app/domain/: models.py  services.py
mamoru_agent_api/app/infrastructure/: gemini.py  mocks.py
mamoru_agent_api/app/usecases/: consultations.py
mamoru_agent_frontend/: package-lock.json  package.json
mamoru_agent_frontend/app/: layout.tsx
mamoru_agent_frontend/components/: action-items.tsx  auto-resize-textarea.tsx  category-selector.tsx  character-avatar.tsx  chat-interface.tsx  chat-message.tsx  header.tsx  hotline-dialog.tsx  legal-reference.tsx  message-bubble.tsx  message-status.tsx  office-finder.tsx  smart-suggest.tsx  task-checklist.tsx  theme-toggle.tsx  typing-indicator.tsx  typing-text.tsx  welcome-screen.tsx
mamoru_agent_frontend/components/ui/: themes.ts
mamoru_agent_frontend/lib/: test-data.ts  theme.ts
mamoru_agent_frontend/services/: api.ts  consultation.ts  office-finder.ts
mamoru_agent_frontend/types/: api.ts  consultation.ts  core.ts  messages.ts  office.ts  task.ts
mamoru_agent_frontend/utils/: nlp.ts
